lab3/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: indfr
  labels:
    app: indfr
spec:
  replicas: 2
  selector:
    matchLabels:
      app: http-server
  template:
    metadata:
      labels:
        app: http-server
    spec:
      containers:
      - name: indfr-app
        image: ifilyaninitmo/itdt-contained-frontend:master
        ports:
        - containerPort: 3000
